--- a/smart_bill.kv
+++ b/smart_bill.kv
@@ -366,7 +366,7 @@ GridLayout:
 
 
                     RoundedButton:
-                        text: 'Add'
+                        text: 'Save'
                         font_size: '24sp'
                         pos_hint: {"x":0.5, "top":0.1}
                         size_hint: 0.39, 0.09
@@ -536,7 +536,7 @@ GridLayout:
                             app.root.ids['add_receipt'].cancelBtn()
 
                     RoundedButton:
-                        text: 'Add / Save'
+                        text: 'Save'
                         font_size: '24sp'
                         pos_hint: {"x":0.5, "top":0.15}
                         size_hint: 0.39, 0.09
@@ -596,8 +596,8 @@ GridLayout:
                     size_hint: 0.4, 0.09
                     on_release:
                         app.root.ids['payers_list'].OKBtn()
-                        app.root.ids['screen_manager'].current = "add_receipt"
-                        root.ids.pay_list.clear_widgets()
+                        #app.root.ids['screen_manager'].current = "add_receipt"
+                        #root.ids.pay_list.clear_widgets()
 
 
         ExpSplitWindow:
@@ -619,8 +619,14 @@ GridLayout:
                 size: root.width, root.height
 
                 ScrollView:
-                    pos_hint: {"x":0.05, "top":1}
-                    size_hint: 0.9, 0.9
+                    canvas.before:
+                        Color:
+                            rgba: 1,1,1,0.95
+                        Rectangle:
+                            pos: self.pos
+                            size: self.size
+                    pos_hint: {"x":0.05, "top":0.98}
+                    size_hint: 0.9, 0.84
                     #size: self.size
                     GridLayout:
                         id: grid1
