--- a/smart_bill.kv
+++ b/smart_bill.kv
@@ -42,7 +42,7 @@ GridLayout:
                 cols: 1
 
                 Label:
-                    text: 'Smart Bill'
+                    text: 'Sm@rt Bill'
                     font_size: '48sp'
                     pos_hint: {"x":0.1, "top":1}
                     size_hint: 0.8, 0.2
@@ -115,7 +115,7 @@ GridLayout:
                     text: 'Confirm'
                     font_size: '24sp'
                     pos_hint: {"x":0.1, "top":0.7}
-                    size_hint: 0.4, 0.15
+                    size_hint: 0.35, 0.15
                     on_release:
                         root.ids.del_conf_sett.delSett()
                         root.ids['screen_manager'].transition.direction = "down"
@@ -125,8 +125,8 @@ GridLayout:
                 RoundedButton:
                     text: 'Cancel'
                     font_size: '24sp'
-                    pos_hint: {"x":0.5, "top":0.7}
-                    size_hint: 0.4, 0.15
+                    pos_hint: {"x":0.55, "top":0.7}
+                    size_hint: 0.35, 0.15
                     on_release:
                         app.root.ids['screen_manager'].current = 'main'
 
@@ -166,7 +166,7 @@ GridLayout:
                     text: 'Confirm'
                     font_size: '24sp'
                     pos_hint: {"x":0.1, "top":0.7}
-                    size_hint: 0.4, 0.15
+                    size_hint: 0.35, 0.15
                     on_release:
                         root.ids.del_conf_rec.delRec()
                         root.ids['screen_manager'].transition.direction = "down"
@@ -176,8 +176,8 @@ GridLayout:
                 RoundedButton:
                     text: 'Cancel'
                     font_size: '24sp'
-                    pos_hint: {"x":0.5, "top":0.7}
-                    size_hint: 0.4, 0.15
+                    pos_hint: {"x":0.55, "top":0.7}
+                    size_hint: 0.35, 0.15
                     on_release:
                         app.root.ids['screen_manager'].current = 'add_receipt'
 
@@ -205,7 +205,7 @@ GridLayout:
                     text: 'Confirm'
                     font_size: '24sp'
                     pos_hint: {"x":0.1, "top":0.7}
-                    size_hint: 0.4, 0.15
+                    size_hint: 0.35, 0.15
                     on_release:
                         root.ids.add_settl.updateSett()
                         root.ids['screen_manager'].transition.direction = "down"
@@ -214,8 +214,8 @@ GridLayout:
                 RoundedButton:
                     text: 'Cancel'
                     font_size: '24sp'
-                    pos_hint: {"x":0.5, "top":0.7}
-                    size_hint: 0.4, 0.15
+                    pos_hint: {"x":0.55, "top":0.7}
+                    size_hint: 0.35, 0.15
                     on_release:
                         root.ids.add_settl.updateDismiss()
                         root.ids['screen_manager'].transition.direction = "down"
@@ -324,9 +324,12 @@ GridLayout:
                             app.root.ids['screen_manager'].current = "update_conf_sett"
 
                     Label:
-                        text: 'Receipt (opt.)'
+                        text: 'Receipt (opt.) '
                         pos_hint: {"x":0.1, "top":0.64}
-                        size_hint: 0.3, 0.06
+                        size_hint: 0.3, 0.05
+                        halign: 'right'
+                        valign: 'middle'
+                        text_size: self.size
 
                     RoundedButton:
                         text: 'Add'
@@ -419,6 +422,7 @@ GridLayout:
                     Label:
                         id: sett_name
                         markup: True
+                        bold: True
                         text: 'settlement name'
                         pos_hint: {"x":0.4, "top":0.8}
                         size_hint: 0.5, 0.05
