adding opening of PDF report + some error repair

--- a/smart_bill.kv
+++ b/smart_bill.kv
@@ -6,7 +6,8 @@
         RoundedRectangle:
             pos: self.pos
             size: self.size
-            radius: [10,]
+            radius: [18,2,18,2]
+
 
 <BackgroundColor@Widget>
     background_color: 1, 1, 1, 1
